simple example about system v message queue

--- a/linux/ipc/my_unp/svmsg/Makefile
+++ b/linux/ipc/my_unp/svmsg/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= ctl 
+BIN= ctl  msgcreate msgrcv msgrcvid msgsnd msgrmid
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
