--- a/linux/my_apue/signals/sigaction/Makefile
+++ b/linux/my_apue/signals/sigaction/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= read_intr0  read_intr read_intr_signal for_loop
+BIN=sigaction
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
