the effective of mmap and read write

--- a/linux/ipc/my_unp/shm/Makefile
+++ b/linux/ipc/my_unp/shm/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=  mmap_read mmapcopy
+BIN=  mmap_read mmapcopy effect_of_mmap
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
