--- a/linux/ipc/my_unp/shm/shm/Makefile
+++ b/linux/ipc/my_unp/shm/shm/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=  incr2
+BIN=  incr2 incr3 incr_map_anon incr_dev_zero
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS) -pthread $< -o $@
