access mmap object

--- a/linux/ipc/my_unp/shm/shm/Makefile
+++ b/linux/ipc/my_unp/shm/shm/Makefile
@@ -1,10 +1,10 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=  incr2 incr3 incr_map_anon incr_dev_zero
+BIN=  incr2 incr3 incr_map_anon incr_dev_zero test1
 all:$(BIN)
 %:%.c
-	$(CC) $(CFLAGS) -pthread $< -o $@
+	$(CC) $(CFLAGS) -pthread -lm $< -o $@
 clean:
 	rm -f *.o $(BIN)
 
