--- a/linux/ipc/my_unp/shm/Makefile
+++ b/linux/ipc/my_unp/shm/Makefile
@@ -1,10 +1,10 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=  mmap_read mmapcopy effect_of_mmap
+BIN=  shmcreate shmunlink shmwrite shmread test3
 all:$(BIN)
-%.o:%.c
-	$(CC) $(CFLAGS) -c $< -o $@
+%:%.c
+	$(CC) $(CFLAGS) -pthread -lrt $< -o $@
 clean:
 	rm -f *.o $(BIN)
 
