--- a/linux/ipc/my_unp/shm/Makefile
+++ b/linux/ipc/my_unp/shm/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=  shmcreate shmunlink shmwrite shmread test3
+BIN= effect_of_mmap mmapcopy mmap_read 
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS) -pthread -lrt $< -o $@
