--- a/linux/ipc/my_unp/pxmsg/Makefile
+++ b/linux/ipc/my_unp/pxmsg/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= mqcreate mqunlink
+BIN= mqcreate mqunlink mqgetattr mqcreate1
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $<  -lrt -o $@
