--- a/linux/ipc/my_unp/pxmsg/mqnotify/Makefile
+++ b/linux/ipc/my_unp/pxmsg/mqnotify/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= sigwait mqnotify_sigwait mq_notify_thread
+BIN= sigwait mqnotify_sigwait mq_notify_thread mq_notify_thread_loop
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $<  -lrt -o $@
