mqnotify of various status

--- a/linux/ipc/my_unp/pxmsg/mqnotify/Makefile
+++ b/linux/ipc/my_unp/pxmsg/mqnotify/Makefile
@@ -1,7 +1,9 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= sigwait mqnotify_sigwait mq_notify_thread mq_notify_thread_loop
+BIN= sigwait mqnotify_sigwait mq_notify_thread mq_notify_thread_loop mqnotify_sig_err1 \
+	 mqnotify_sig_correct mqnotify_sig_err0 mqnotify_sig_pipe
+
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $<  -lrt -o $@
