backtrace and elf

--- a/linux/my_apue/memory/Makefile
+++ b/linux/my_apue/memory/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= mprotect  mallopt
+BIN=backtrace  mprotect  mallopt elf_format
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
