--- a/linux/my_apue/memory_layout/Makefile
+++ b/linux/my_apue/memory_layout/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 #CFLAGS=-Wall -g
 CFLAGS= -g
-BIN=size_of_use mallopt  memory_layout memory_segment_fault  tshm stackoverflow
+BIN= elf_of_use size_of_use mallopt  memory_layout memory_segment_fault  tshm stackoverflow
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
