core file and addr2line command

--- a/linux/my_apue/memory_layout/Makefile
+++ b/linux/my_apue/memory_layout/Makefile
@@ -1,8 +1,7 @@
 .PHONY:clean all
 CC=gcc
-#CFLAGS=-Wall -g
-CFLAGS= -g
-BIN= elf_of_use size_of_use mallopt  memory_layout memory_segment_fault  tshm stackoverflow
+CFLAGS=-Wall -g
+BIN= addr2line elf_of_use size_of_use mallopt  memory_layout memory_segment_fault  tshm stackoverflow
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
