--- a/linux/my_apue/memory/Makefile
+++ b/linux/my_apue/memory/Makefile
@@ -1,6 +1,6 @@
 .PHONY:clean all
 CC=gcc
-CFLAGS=-Wall -g
+CFLAGS=-Wall -g -rdynamic
 BIN=backtrace  mprotect  mallopt elf_format
 all:$(BIN)
 %.o:%.c
