bsd_signal sysv_signal signal

--- a/linux/my_apue/signals/signal/Makefile
+++ b/linux/my_apue/signals/signal/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=signal signal_bsd
+BIN=signal signal_bsd signal_sysv
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
