--- a/linux/my_unp/mysocket/poll_base/Makefile
+++ b/linux/my_unp/mysocket/poll_base/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 CFLAGS=-Wall -g
 #BIN=echosrv echocli
-BIN=select_base pselect_base pselect_signal pselect_signal1 select_forward_port
+BIN=poll_base ppoll_base
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
