--- a/libevent/libevent/Makefile.in
+++ b/libevent/libevent/Makefile.in
@@ -3,7 +3,7 @@
 #
 # Dug Song <dugsong@monkey.org>
 #
-# $Id: Makefile.in,v 1.1 2000/11/14 04:11:01 dugsong Exp $
+# $Id: Makefile.in,v 1.4 2000/11/18 17:52:15 provos Exp $
 
 srcdir          = @srcdir@
 VPATH           = @srcdir@
@@ -13,16 +13,18 @@ prefix          = @prefix@
 exec_prefix	= @exec_prefix@
 libdir		= @libdir@
 mandir		= @mandir@
+includedir	= @includedir@
 
 CC	= @CC@
-CFLAGS	= @CFLAGS@ -I.
+DEFS	= @DEFS@
+CFLAGS	= @CFLAGS@ $(DEFS) -Wall -I.
 LDFLAGS	= @LDFLAGS@
 
 INSTALL	= @INSTALL@
 INSTALL_DATA	= @INSTALL_DATA@
 
 HDRS	= event.h
-SRCS	= event.c
+SRCS	= event.c @EVSRCS@
 OBJS	= $(SRCS:.c=.o)
 
 .c.o:
@@ -40,6 +42,8 @@ install:
 	$(INSTALL_DATA) libevent.a $(libdir)
 	$(INSTALL) -d $(install_prefix)$(mandir)/man3
 	$(INSTALL_DATA) *.3 $(install_prefix)$(mandir)/man3
+	$(INSTALL) -d $(install_prefix)$(includedir)
+	$(INSTALL_DATA) *.h $(install_prefix)$(includedir)
 
 clean:
 	rm -f *.o *~ libevent.a
