--- a/libevent/libevent/Makefile.in
+++ b/libevent/libevent/Makefile.in
@@ -3,7 +3,7 @@
 #
 # Dug Song <dugsong@monkey.org>
 #
-# $Id: Makefile.in,v 1.5 2001/03/06 18:27:36 provos Exp $
+# $Id: Makefile.in,v 1.7 2001/06/06 15:38:55 provos Exp $
 
 srcdir          = @srcdir@
 VPATH           = @srcdir@
@@ -16,8 +16,9 @@ mandir		= @mandir@
 includedir	= @includedir@
 
 CC	= @CC@
+RANLIB	= @RANLIB@
 DEFS	= @DEFS@
-CFLAGS	= @CFLAGS@ $(DEFS) -Wall -I.
+CFLAGS	= @CFLAGS@ $(DEFS) -Wall -I/usr/include -I$(srcdir) -I$(srcdir)/missing
 LDFLAGS	= @LDFLAGS@
 
 INSTALL	= @INSTALL@
@@ -36,7 +37,7 @@ all: libevent.a
 libevent.a: $(OBJS)
 	@echo "building $@"
 	ar cru $@ $(OBJS)
-	@RANLIB@ $@
+	$(RANLIB) $@
 
 install:
 	$(INSTALL) -d $(install_prefix)$(libdir)
