--- a/libevent/libevent/configure.in
+++ b/libevent/libevent/configure.in
@@ -1,7 +1,13 @@
 dnl configure.in for libevent
 dnl Dug Song <dugsong@monkey.org>
-
 AC_INIT(event.c)
+
+AC_CONFIG_HEADER(config.h)
+
+dnl Initialize prefix.
+if test "$prefix" = "NONE"; then
+   prefix="/usr/local"
+fi
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -22,12 +28,9 @@ if test "x$ac_cv_header_sys_queue_h" = "xyes"; then
 #ifdef TAILQ_FOREACH
  yes
 #endif
-], AC_MSG_RESULT(yes),
-		       [ AC_MSG_RESULT(no, using our own)
-			 CFLAGS="$CFLAGS -Imissing/queue" ]
+],	[AC_MSG_RESULT(yes)
+	 AC_DEFINE(HAVE_TAILQFOREACH) ], AC_MSG_RESULT(no)
 	)
-else
-	CFLAGS="$CFLAGS -Imissing/queue"
 fi
 
 if test "x$ac_cv_header_sys_time_h" = "xyes"; then
@@ -38,12 +41,9 @@ if test "x$ac_cv_header_sys_time_h" = "xyes"; then
 #ifdef timeradd
  yes
 #endif
-], AC_MSG_RESULT(yes),
-		       [ AC_MSG_RESULT(no, using our own)
-			 CFLAGS="$CFLAGS -Imissing/time" ]
-	)
-else
-	CFLAGS="$CFLAGS -Imissing/time"
+],	[ AC_DEFINE(HAVE_TIMERADD)
+	  AC_MSG_RESULT(yes)] ,AC_MSG_RESULT(no)
+)
 fi
 
 dnl Checks for typedefs, structures, and compiler characteristics.
@@ -58,10 +58,59 @@ if test "x$haveselect" = "xyes" ; then
 	EVSRCS="select.c"
 fi
 
+havekqueue=no
 if test "x$ac_cv_header_sys_event_h" = "xyes"; then
 	AC_CHECK_FUNCS(kqueue, [havekqueue=yes], )
 	if test "x$havekqueue" = "xyes" ; then
-		EVSRCS="$EVSRCS kqueue.c"
+		AC_MSG_CHECKING(for working kqueue)
+		AC_TRY_RUN(
+#include <sys/types.h>
+#include <sys/time.h>
+#include <sys/event.h>
+#include <stdio.h>
+#include <unistd.h>
+#include <fcntl.h>
+
+int
+main(int argc, char **argv)
+{
+	int kq;
+	int n;
+	int fd[[2]];
+	struct kevent ev;
+	struct timespec ts;
+	char buf[[8000]];
+
+	if (pipe(fd) == -1)
+		exit(1);
+	if (fcntl(fd[[1]], F_SETFL, O_NONBLOCK) == -1)
+		exit(1);
+
+	while ((n = write(fd[[1]], buf, sizeof(buf))) == sizeof(buf))
+		;
+
+        if ((kq = kqueue()) == -1)
+		exit(1);
+
+	ev.ident = fd[[1]];
+	ev.filter = EVFILT_WRITE;
+	ev.flags = EV_ADD | EV_ENABLE;
+	n = kevent(kq, &ev, 1, NULL, 0, NULL);
+	if (n == -1)
+		exit(1);
+	
+	read(fd[[0]], buf, sizeof(buf));
+
+	ts.tv_sec = 0;
+	ts.tv_nsec = 0;
+	n = kevent(kq, NULL, 0, &ev, 1, &ts);
+	if (n == -1 || n == 0)
+		exit(1);
+
+	exit(0);
+}, [AC_MSG_RESULT(yes)
+    AC_DEFINE(HAVE_WORKING_KQUEUE)
+    EVSRCS="$EVSRCS kqueue.c"], AC_MSG_RESULT(no), AC_MSG_RESULT(no))
 	fi
 fi
 
