--- a/linux/socket_src/socket/mysocket/epoll/Makefile
+++ b/linux/socket_src/socket/mysocket/epoll/Makefile
@@ -1,7 +1,8 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=epoll_create epoll_ctl epoll_wait epoll_ctl_socket epoll_wait_socket epoll_wait_socket_levle epoll_wait_socket_ptr
+BIN=epoll_create epoll_ctl epoll_wait epoll_ctl_socket epoll_wait_socket epoll_wait_socket_levle epoll_wait_socket_ptr\
+	epoll_oneshot
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< -o $@ 
