--- a/libevent/libevent/configure.in
+++ b/libevent/libevent/configure.in
@@ -2,7 +2,8 @@ dnl configure.in for libevent
 dnl Dug Song <dugsong@monkey.org>
 AC_INIT(event.c)
 
-AC_CONFIG_HEADER(config.h)
+AM_INIT_AUTOMAKE(libevent,0.4)
+AM_CONFIG_HEADER(config.h)
 
 dnl Initialize prefix.
 if test "$prefix" = "NONE"; then
@@ -52,10 +53,17 @@ AC_HEADER_TIME
 dnl Checks for library functions.
 AC_CHECK_FUNCS(gettimeofday)
 
-AC_SUBST(EVSRCS)
+AC_SUBST(LIBOBJS)
+haveselect=no
 AC_CHECK_FUNCS(select, [haveselect=yes], )
 if test "x$haveselect" = "xyes" ; then
-	EVSRCS="select.c"
+	LIBOBJS="$LIBOBJS select.o"
+fi
+
+neederr=no
+AC_CHECK_FUNCS(warnx, , [neederr=yes])
+if test $neederr = yes; then
+   LIBOBJS="$LIBOBJS err.o"
 fi
 
 havekqueue=no
@@ -110,8 +118,8 @@ main(int argc, char **argv)
 	exit(0);
 }, [AC_MSG_RESULT(yes)
     AC_DEFINE(HAVE_WORKING_KQUEUE)
-    EVSRCS="$EVSRCS kqueue.c"], AC_MSG_RESULT(no), AC_MSG_RESULT(no))
+    LIBOBJS="$LIBOBJS kqueue.o"], AC_MSG_RESULT(no), AC_MSG_RESULT(no))
 	fi
 fi
 
-AC_OUTPUT(Makefile)
+AC_OUTPUT(Makefile test/Makefile sample/Makefile)
