--- a/libevent/libevent/sample/Makefile.am
+++ b/libevent/libevent/sample/Makefile.am
@@ -3,9 +3,10 @@ AUTOMAKE_OPTIONS = foreign no-dependencies
 LDADD = -L.. -levent
 CPPFPLAGS = -I..
 
-noinst_PROGRAMS = event-test time-test
+noinst_PROGRAMS = event-test time-test signal-test
 
 event_test_sources = event-test.c
 time_test_sources = time-test.c
+signal_test_sources = signal-test.c
 
 DISTCLEANFILES = *~
