ptrace register and tencent libco

--- a/linux/my_apue/ptrace/Makefile
+++ b/linux/my_apue/ptrace/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= ptrace_base ptrace1 ptrace_reg
+BIN= ptrace_base ptrace_getregs ptrace_register
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
