ptrace breakpoints and inject code

--- a/linux/my_apue/ptrace/Makefile
+++ b/linux/my_apue/ptrace/Makefile
@@ -1,7 +1,8 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= ptrace_base ptrace_getregs ptrace_register ptrace_write_reverse ptrace_single_step dummy1
+BIN= ptrace_base ptrace_getregs ptrace_register ptrace_write_reverse ptrace_single_step dummy1 \
+	 dummy2 ptrace_attach ptrace_breakpoints hello ptrace_inject_code
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
