sync_add_and_fetch sync_fetch_and_add

--- a/linux/gcc/cas/Makefile
+++ b/linux/gcc/cas/Makefile
@@ -3,7 +3,7 @@ CC=gcc
 CFLAGS=-Wall -g -lpthread
 BIN= cas_pthread 
 all:$(BIN)
-%.o:%.c
-	$(CC) $(CFLAGS) -c $< -o $@
+%:%.c
+	$(CC) $(CFLAGS)  $< -o $@
 clean:
 	rm -f *.o $(BIN)
