--- a/linux/gcc/enum/Makefile
+++ b/linux/gcc/enum/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= enum_int enum_long define_int const_int
+BIN= enum_int enum_long define_int const_int sizeof_enum
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
