const_cast in function

--- a/cpp/c++study/const/Makefile
+++ b/cpp/c++study/const/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g
-BIN= const_main const_main_local
+BIN= const_main const_main_local const_main_fun
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -o $@
