--- a/cpp/c++study/const/Makefile
+++ b/cpp/c++study/const/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g  -std=c++11
-BIN= const_main const_main_local const_main_fun static_const static_const_to_change class_const
+BIN= const_main const_main_local const_main_fun static_const static_const_to_change class_const class_const_non
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -o $@
