--- a/c/container_of/Makefile
+++ b/c/container_of/Makefile
@@ -1,11 +1,12 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=main test
+BIN=main test typeof
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< -o $@ 
+	$(CC) -S $(CFLAGS)  $< -o $@.s 
 
 clean:
-	rm -f *.o $(BIN)
+	rm -f *.o *.s $(BIN)
 
