--- a/cpp/insideObjectModel/virtual64/vtbl_probe/Makefile
+++ b/cpp/insideObjectModel/virtual64/vtbl_probe/Makefile
@@ -1,7 +1,8 @@
 .PHONY:clean all
 CC=g++
 CPPFLAGS=-Wall -g --save-temps
-BIN=vtbl vtbl_no_inheritance vtbl_inheritance vtbl_inheritance_override vtbl_mulit_inhrit vtbl_mulit_inhrit_override
+BIN=vtbl vtbl_no_inheritance vtbl_inheritance vtbl_inheritance_override vtbl_mulit_inhrit vtbl_mulit_inhrit_override\
+	vtbl_duplicate_inherit
 all:$(BIN)
 %:%.c
 	$(CC) $(CPPFLAGS)  $< -o $@ 
