--- a/linux/ace/HelloWorld/Makefile
+++ b/linux/ace/HelloWorld/Makefile
@@ -1,6 +1,6 @@
-BIN =  HelloWorld
+BIN =  HelloWorld  main
 
-FILES = HelloWorld.cpp
+#FILES = HelloWorld.cpp main.cpp
 
 
 SRC = $(FILES) 
@@ -8,7 +8,7 @@ OBJ = $(FILES)
 
 LIBS = /usr/local/src/ACE_wrappers/lib/libACE.a 
 
-CCFLAGS = -I./ 
+CCFLAGS = -I./  -save-temps
 
 BUILD = $(VBIN)
 
@@ -23,13 +23,19 @@ LIBS = $(ACE_ROOT)/lib
 
 .SUFFIXES: .cpp.o
 .cpp.o:
-	$(CC) -g -I$(INCL) -c $*.cpp
+	$(CC) $(CCFLAGS) -save-temps -g -I$(INCL) -c $*.cpp
 
 # -lpthread 最好加上 其他平台未必通的过
-$(BIN): $(FILES)
-	$(CC) -lpthread -ldl -lrt -I$(INCL) -L$(LIBS)  -o HelloWorld $(FILES) /usr/local/src/ACE_wrappers/lib/libACE.a 
+.PHONY:clean all
+all:$(BIN)
+%:%.cpp 
+#$(BIN): $(FILES)
+	$(CC) -save-temps -lpthread -ldl -lrt -I$(INCL) -L$(LIBS)  -o $@ $<  /usr/local/src/ACE_wrappers/lib/libACE.a 
 #  -lACE 不行
 #$(CC) -ldl -lrt -I$(INCL) -L$(LIBS)  -o HelloWorld $(FILES) /usr/local/src/ACE_wrappers/lib/libACE.a 
 
 clean:
-	-rm $(BIN)  -rf
+	rm -f *.o $(BIN) *.s *.ii
+
+
+
