--- a/linux/ace/Server/Makefile
+++ b/linux/ace/Server/Makefile
@@ -1,11 +1,9 @@
-BIN =  HelloWorld main 
+BIN =  server client
 
-
-
-SRC = $(FILES) 
-OBJ = $(FILES) 
 
 #LIBS = /usr/local/src/ACE_wrappers/lib/libACE.a 
+
+
 CC = g++
 INCL = $(ACE_ROOT)
 LIBS = $(ACE_ROOT)/lib
@@ -17,10 +15,11 @@ CCFLAGS = -I./  -save-temps
 
 # -lpthread 最好加上 其他平台未必通的过
 .PHONY:clean all
+
 all:$(BIN)
 %:%.cpp 
-#$(BIN): $(FILES)
 	$(CC) -save-temps -lpthread -ldl -lrt -I$(INCL) -L$(LIBS)  -o $@ $<  /usr/local/src/ACE_wrappers/lib/libACE.a 
+
 #  -lACE 不行
 #$(CC) -ldl -lrt -I$(INCL) -L$(LIBS)  -o HelloWorld $(FILES) /usr/local/src/ACE_wrappers/lib/libACE.a 
 
