--- a/linux/my_unp/mysocket/name_and_address/gethostbyname/Makefile
+++ b/linux/my_unp/mysocket/name_and_address/gethostbyname/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN= main1 main2
+BIN= main1 main2 hostent
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< -o $@ 
