--- a/linux/my_unp/mysocket/inet/Makefile
+++ b/linux/my_unp/mysocket/inet/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=inet_aton inet_addr
+BIN=inet_aton inet_addr inet_ntoa
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
