socket option SO_DOMAIN

--- a/linux/my_unp/mysocket/socket_option/Makefile
+++ b/linux/my_unp/mysocket/socket_option/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 CFLAGS=-Wall -g
 #BIN=echosrv echocli
-BIN=so_acceptconn so_type so_protocol
+BIN=so_acceptconn so_type so_protocol  so_domain
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
