--- a/linux/my_unp/mysocket/advancedio_tcp_udp/send_fd/Makefile
+++ b/linux/my_unp/mysocket/advancedio_tcp_udp/send_fd/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=socketpair send_fd socketpair_dgram
+BIN=socketpair send_fd socketpair_dgram align
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
