--- a/linux/my_unp/mysocket/designAlternatives/server_prefork/Makefile
+++ b/linux/my_unp/mysocket/designAlternatives/server_prefork/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g
-BIN=server_prefork server_prefork_meter
+BIN=server_prefork server_prefork_meter server_prefork_select
 all:$(BIN)
 %.o:%.c
 	$(CC) $(CFLAGS) -c $< -o $@
