set auto-solib-add mode

--- a/c/gdb/so_debug/solib/Makefile
+++ b/c/gdb/so_debug/solib/Makefile
@@ -1,6 +1,6 @@
 CPPFLAGS=-g -Wall
 main:main.o ../libggg.so
-libggg.so:get.h
+../libggg.so:get.h
 	g++ get.cpp -shared -g -fPIC -DDEBUG -o ../libggg.so
 
 
