--- a/c/va_list/Makefile
+++ b/c/va_list/Makefile
@@ -1,10 +1,10 @@
 .PHONY:clean all
 CC=gcc
-CFLAGS=-Wall -g --save-temps
-BIN= main 
+CFLAGS=-Wall -g --save-temps -std=c99
+BIN= main double int
 all:$(BIN)
 %:%.c 
-	$(CC) $(CFLAGS)   $< -o $@
+	$(CC) $(CFLAGS)   $< -o $@ -lm
 	
 clean:
 	rm -f *.o $(BIN) *.s *.i
