--- a/linux/my_csapp/asm/x86-IA32/Makefile
+++ b/linux/my_csapp/asm/x86-IA32/Makefile
@@ -1,11 +1,12 @@
 .PHONY:clean all
 CC=gcc
-CFLAGS=-Wall -g -O1 -save-temps
+CFLAGS=-Wall   -g  -save-temps
 #CFLAGS=-Wall -O1 -save-temps
 BIN= main  
 all:$(BIN)
 %:%.c 
-	$(CC) $(CFLAGS)   $< -o $@
+	$(CC) $(CFLAGS) -O0   $< -o $@_O0
+	$(CC) $(CFLAGS) -O1   $< -o $@_O1
 	
 clean:
 	rm -f *.o $(BIN) *.s *.i
