--- a/linux/lua/luac/callcfromlua/Makefile
+++ b/linux/lua/luac/callcfromlua/Makefile
@@ -2,12 +2,13 @@
 CC=gcc
 CFLAGS=-Wall -g  -shared -fPIC -I/usr/include/lua5.1 -llua5.1
 
-BIN=  hellofunc msleep
+BIN= mysin mylib
 all:$(BIN)
-hellofunc:hellofunc.c 
-	$(CC) $(CFLAGS)   $<  -o power.so
-msleep:mysleep.c 
-	$(CC) $(CFLAGS)   $<  -o mysleep.so
+
+mysin:l_sin.c 
+	$(CC) $(CFLAGS)   $<  -o mysin.so
 	
+mylib:l_dir.c 
+	$(CC) $(CFLAGS)   $<  -o mylib.so
 clean:
 	rm -f *.o $(BIN) *.s *.so
