--- a/linux/lua/luac/callluafromc/Makefile
+++ b/linux/lua/luac/callluafromc/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 CFLAGS=-Wall -g -I/usr/include/lua5.1 -llua5.1
 
-BIN= hello  callfunc callfunc_arg callfunc_table callfunc_1 callfunc_arg_1 callfunc_table_1
+BIN= hello  callfunc callfunc_arg callfunc_table callfunc_1 callfunc_arg_1 callfunc_table_1 lua_next
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
