libevent  阻塞式 connect 及接受

--- a/libevent/libevent2/libevent/sample/echo-server-new/Makefile
+++ b/libevent/libevent2/libevent/sample/echo-server-new/Makefile
@@ -7,7 +7,7 @@ INCLUDE = -I../../include
 LIB = -L../../.libs -levent
 
 
-BIN=client server
+BIN=client server echocli
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $<  $(LIB)  $(INCLUDE) -o $@
