此时连接成功不会通知 断开会通知

--- a/libevent/libevent2/libevent/sample/study-buffevent_block/Makefile
+++ b/libevent/libevent2/libevent/sample/study-buffevent_block/Makefile
@@ -7,7 +7,7 @@ INCLUDE = -I../../include
 LIB = -L../../.libs -levent  -lrt 
 
 
-BIN=echoserver echoserver_block#bufferevent_socket_new #bufferevent_socket_connect_hostname hello-world bufferevent bufferevent-epollout
+BIN=echoserver_block server_block_init#bufferevent_socket_new #bufferevent_socket_connect_hostname hello-world bufferevent bufferevent-epollout
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $<  $(LIB)  $(INCLUDE) -o $@
