--- a/cpp/c++11/auto/Makefile
+++ b/cpp/c++11/auto/Makefile
@@ -2,7 +2,7 @@
 CC=g++ 
 
 CFLAGS = -std=c++11 -g --save-temps
-BIN= main  int auto auto1
+BIN= main 
 all:$(BIN)
 %:%.cpp 
 	$(CC) $(CFLAGS)   $< -o $@
