--- a/linux/memcache/libmemcached/mytest/Makefile
+++ b/linux/memcache/libmemcached/mytest/Makefile
@@ -10,7 +10,7 @@ LIB = -L../libmemcached/.libs -lmemcached
 
 
 #BIN=memcached_create memcached_server_add memcached_set memcached_get memcached_cas memcached_cas1
-BIN=memcached_create memcached_server_add memcached_set memcached_get memcached_cas 
+BIN=memcached_create memcached_server_add memcached_set memcached_get memcached_cas  memcached_mget
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS)  $< $(LIB) $(INCLUDE) -o $@
