修改 递归调用

--- a/c/gdb_advance/recursion/gdb_recurse.ini
+++ b/c/gdb_advance/recursion/gdb_recurse.ini
@@ -15,6 +15,7 @@
 
 #   这里是分界点  一级级的返回
 #  返回值放到eax  每一级 返回一个值 知道返回到main函数
+#  0x8(%ebp) 参数值， 以及上一级的 返回值 eax
 #   0x0804841f <+36>:    add    $0x10,%esp                      
 #   0x08048422 <+39>:    imul   0x8(%ebp),%eax                  
 #   0x08048426 <+43>:    mov    %eax,-0xc(%ebp)                 
