斐波那契数列 迭代版本和 递归版本 对比

--- a/c/gdb_advance/recursion/fabonacci/performance/Makefile
+++ b/c/gdb_advance/recursion/fabonacci/performance/Makefile
@@ -2,7 +2,7 @@
 CC=gcc
 #CFLAGS=-Wall -save-temps -O1
 CFLAGS=-Wall -g -save-temps -std=c99
-BIN= main 
+BIN= main_iterate  main_recursive
 all:$(BIN)
 %:%.c 
 	$(CC) $(CFLAGS)   $< -o $@
