modified:   memcheck/Makefile 	new file:   memcheck/badlap.c 	new file:   memcheck1/Makefile 	new file:   memcheck1/badleak.cpp 	new file:   memcheck1/tree.cpp 	new file:   memcheck1/tree.h 	modified:   memcheck_cpp/Makefile 	new file:   memcheck_cpp/badmac.cpp

--- a/linux/valgrind/memcheck/Makefile
+++ b/linux/valgrind/memcheck/Makefile
@@ -1,7 +1,7 @@
 .PHONY:clean all
 CC=gcc
 CFLAGS=-Wall -g  -std=c99
-BIN= simple badloop badacc
+BIN= simple badloop badacc badlap
 all:$(BIN)
 %:%.c
 	$(CC) $(CFLAGS) $< -o $@
