--- a/linux/valgrind/memcheck_cpp/Makefile
+++ b/linux/valgrind/memcheck_cpp/Makefile
@@ -1,13 +1,10 @@
 .PHONY:clean all
 CC=g++
 CFLAGS=-Wall -g  
-BIN= double_delete 
+BIN= double_delete  badmac
 all:$(BIN)
 %:%.cpp
 	$(CC) $(CFLAGS) $< -o $@
-	  #$(CC) $(CFLAGS) -D USE_INLINE $< -o  $@
-	  #$(CC) $(CFLAGS) -finline-functions $< -o $@_non 
-	  #$(CC) -S  -D USE_INLINE $< -o  $@.s
-	  #$(CC) -S  -finline-functions $< -o  $@_non.s
+
 clean:
 	rm -f *.o $(BIN) *.s
