--- a/protobuf/studyproto/main/Makefile
+++ b/protobuf/studyproto/main/Makefile
@@ -2,7 +2,7 @@
 CC=g++
 #CFLAGS=-Wall -save-temps -O1
 CFLAGS=-Wall -g #-save-temps 
-BIN= write_msg  write_msg_file
+BIN= write_msg  write_msg_file write_msg_string
 all:$(BIN)
 %:%.cc 
 	$(CC) $(CFLAGS)  addressbook.pb.cc  $< -o $@ -lprotobuf
